@startuml

class Main

class Director {
    builder
    construct()
}

class Builder {
    {abstract}makeTitle()
    {abstract}makeString()
    {abstract}makeText()
    {abstract}close()
}

class TextBuilder {
    buffer
    makeTitle()
    makeString()
    makeItems()
    close()
    getResult()
}

class HTMLBuilder {
    filename
    writer
    makeTitle()
    makeString()
    makeItems()
    close()
    getResult()
}

Main -r-> Director:Uses
Main --> TextBuilder:Uses
Main --> HTMLBuilder:Uses
Director o-r-> Builder
TextBuilder -u-|> Builder
HTMLBuilder -u-|> Builder


@enduml